fix bug style outline with box-shadow on firefox

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1646,8 +1646,10 @@ a.button.disabled, input.disabled {
   cursor: move;
 }
 #box-organizer .block:hover {
-    box-shadow: 0 0 15px #000;
-    outline: 3px solid white;
+    box-shadow: 0px 0px 0px 2px #FFF,
+                0px 0px 0px 2px #FFF,
+                0px 0px 10px rgba(0, 0, 0, 0.6);
+    outline: none;
 }
 #box-organizer .block {
   cursor: move;
